<?xml version="1.0" encoding="UTF-8"?>

<!--
 Copyright (C) 2014 Szu-Hsien Lee (misgod.tw@gmail.com)

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

 http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">台灣藝文資訊</string>
    <string name="event_category">藝文活動</string>
    <string name="place_category">文化設施</string>
    <string name="showunit">演出\n單位</string>
    <string name="masterunit">主辦\n單位</string>
    <string name="subunit">承辦\n單位</string>
    <string name="supportunit">贊助\n單位</string>
    <string name="otherunit">其他\n單位</string>
    <string name="event_info_label">活動資訊</string>
    <string name="event_unit_label">相關單位</string>
    <string name="discount_info_field">折扣\n資訊</string>
    <string name="eventshow_label">活動場次</string>
    <string name="eventdate">演出\n日期</string>
    <string name="show_time">時間</string>
    <string name="show_location_name">地點</string>
    <string name="show_location">地址</string>
    <string name="show_price">票價</string>
    <string name="update_faile">無法取得資料!!</string>
    <string name="loading">資料載入中…</string>
    <string name="loadingod">從文化部取回資料…</string>
    <string name="eventsource">資料\n來源</string>
    <string name="eventweb">活動\n網站</string>
    <string name="event_contact">官方\n網站</string>
    <string name="no_description">無內容描述</string>
    <string name="no_unit">無展演單位資訊</string>
    <string name="not_implement">目前版本尚未提供此功能</string>
    <string name="sales">售</string>
    <string name="free">免</string>

</resources>
